--- a/DarkWoods.csproj
+++ b/DarkWoods.csproj
@@ -7,7 +7,7 @@
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{B11F95D6-9859-6819-EC39-F57BFA433F01}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <AssemblyName>Assembly-CSharp.dll</AssemblyName>
+    <AssemblyName>Assembly-CSharp</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{E097FAD1-6243-4DAD-9C02-E9B9EFC3FFC1};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
@@ -15,6 +15,7 @@
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
     <CompilerResponseFile>
     </CompilerResponseFile>
+    <UnityProjectGenerator>VSTU</UnityProjectGenerator>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>WebGL:20</UnityBuildTarget>
     <UnityVersion>2017.2.0f3</UnityVersion>
@@ -235,7 +236,9 @@
     <Compile Include="Assets\Scripts\WorldCreator.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="Assets\XMLData\Items.xml" />
+    <None Include="Assets\XMLData\Items.xml">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Assets\XMLData\RoomData.xml">
       <SubType>Designer</SubType>
     </None>
